syntax = "proto3";

package proto.app;

option go_package = "github.com/tel4vn/fins-microservices/gen/proto/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message AppBodyRequest {
    string app_name = 1;
    bool status = 2;
    InfoApp app = 3;
}

message InfoApp {
    ZaloApp zalo = 1;
    FacebookApp facebook = 2;
}

message ZaloApp {
    string app_id = 1;
    string app_name = 2;
    string secret_key = 3;
    string access_token = 4;
    bool status = 5;
}

message FacebookApp {
    string app_id = 1;
    string app_name = 2;
    string app_token = 3;
    bool status = 4;
}

message AppResponse {
    string code = 1;
    string message = 2;
    string id = 3;
}

message AppRequest {
    string app_name = 1;
    string status = 2;
    string limit = 3;
    string offset = 4;
}

message AppGetResponse {
    string code = 1;
    string message = 2;
    repeated google.protobuf.Struct data = 3;
    int32 total = 4;
}

service App {
    rpc PostApp(AppBodyRequest) returns (AppResponse) {
        option (google.api.http) = {
            post : "/bss/v1/chat/app",
            body : "*"
        };
    }
    rpc GetApp(AppRequest) returns (AppGetResponse) {
        option (google.api.http) = {
            get : "/bss/v1/chat/app",
        };
    }
}