syntax = "proto3";

package proto.chatVendor;

option go_package = "github.com/tel4vn/fins-microservices/gen/proto/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message PostChatVendorRequest {
    string vendor_name = 1;
    string vendor_type = 2;
    bool status = 3;
}

message PostChatVendorResponse {
    string code = 1;
    string message = 2;
    string id = 3;
}

service ChatVendorService {
    rpc PostChatVendor (PostChatVendorRequest) returns (PostChatVendorResponse) {
        option (google.api.http) = {
            post : "/bss-chat/v1/chat-vendor"
            body : "*"
        };
    };
}